--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="../../navbar.css">
 <nav class="navbar">
     <div class="navbar-logo">
-        <img src="logo.svg" alt="Logo">
+        <img src="svg/logo.svg" alt="Logo">
     </div>
     <ul class="navbar-menu">
         <li><a href="/">Home</a></li>
@@ -19,7 +19,7 @@
                 <a href="/entries/view">View Entries</a>
             </div>
         </div>
-         <div class="dropdown">
+        <div class="dropdown">
             <button class="dropbtn">Invoices</button>
             <div class="dropdown-content">
                 <a href="/invoices/quote">Quotes</a>
