--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -1,50 +1,96 @@
 <div class="sidebar">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <h2>InSync</h2>
     <ul>
-        <li>Dashboard</li>
-        <li>Users</li>
-        <li>Products</li>
-        <li>Orders</li>
+        <li><a href="/dashboard/treanding">
+                <ul class="innter-ul"><img class="logo" src="svg/house.svg">
+                    <div class="text">Dashboard</div>
+                </ul>
+            </a></li>
+        <li><a href="/dashboard/pending">
+                <ul class="innter-ul"><img class="logo" src="svg/user.svg">
+                    <div class="text">User</div>
+                </ul>
+            </a></li>
+        <li><a href="/Customer/view">
+                <ul class="innter-ul"><img class="logo" src="svg/pro.svg">
+                    <div class="text">Customer</div>
+                </ul>
+            </a></li>
+        <li><a href="/entries/view">
+                <ul class="innter-ul"><img class="logo" src="svg/order.svg">
+                    <div class="text">Orders</div>
+                </ul>
+            </a></li>
     </ul>
 </div>
 <style>
+    .text {
+        font-family: Apple Symbols;
+        font-size: 22px;
+        color: #fff;
+        margin-top: 10px;
+        cursor: pointer;
+    }
 
-h2{
-    font-size: 5vh;
-    font-family: Apple Symbols;
-    color: #fff;
-    margin-bottom: 20px;
-    margin-top: 0;
-}
-/* Sidebar */
+    ul .innter-ul {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .logo {
+        width: 30px;
+        height: 30px;
+        padding-right: 10px;
+    }
+
+    a {
+        text-decoration: none;
+        color: #fff;
+
+    }
+
+    ul {
+        list-style-type: none;
+        display: inline;
+    }
+
+    h2 {
+        font-size: 5vh;
+        font-family: Apple Symbols;
+        color: #fff;
+        margin-bottom: 20px;
+        margin-top: 0;
+    }
+    /* Sidebar */
     .sidebar {
-    width: 20%;
-    padding: 20px;
-    text-align: left;
-}
+        width: 20%;
+        padding: 20px;
+        text-align: left;
+    }
 
-.sidebar ul {
-    list-style-type: none;
-    padding: 0;
-}
+    .sidebar ul {
+        list-style-type: none;
+        padding: 0;
+    }
 
-.sidebar ul li {
-    padding: 10px 0;
-    padding-left: 10px;
-    padding-right: 10px;
-    width: 200px;
-    font-family: Apple Symbols;
-    font-size: 22px;
-    color: #fff;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-right: 15px;
-    cursor: pointer;
-}
+    .sidebar ul li {
+        padding: 10px 0;
+        padding-left: 10px;
+        padding-right: 10px;
+        width: 200px;
+        font-family: Apple Symbols;
+        font-size: 22px;
+        color: #fff;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        margin-right: 15px;
+        cursor: pointer;
+    }
 
-.sidebar ul li:hover {
-    background-color: #a8a8a8;
-    border-radius: 15px;
-}
-
+    .sidebar ul li:hover {
+        background-color: #a8a8a8;
+        border-radius: 15px;
+    }
 </style>
